--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Chem Quiz</title>
         <meta name="description" content="Test your chemistry knowledge">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
-        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro" rel="stylesheet">
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
